[gd_scene load_steps=4 format=2]

[ext_resource path="res://content/levels/tennis_courts/CourtRoot.gd" type="Script" id=1]
[ext_resource path="res://content/interface/Main Interface.tscn" type="PackedScene" id=2]

[sub_resource type="Animation" id=1]
resource_name = "Fade"
length = 4.0
tracks/0/type = "value"
tracks/0/path = NodePath(".:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5, 4 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0, 0, 0.12549, 1 ), Color( 0, 0, 0.12549, 1 ), Color( 0, 0, 0.12549, 0 ) ]
}

[node name="CourtRoot" type="Node2D"]
script = ExtResource( 1 )

[node name="Level_Container" type="Node" parent="."]

[node name="Gameplay_Container" type="Node" parent="."]

[node name="Camera2D" type="Camera2D" parent="Gameplay_Container"]
visible = false
position = Vector2( 240, 135 )

[node name="SpawnPoint_Player" type="Node2D" parent="Gameplay_Container"]
position = Vector2( 32, 192 )

[node name="SpawnPoint_Opponent" type="Node2D" parent="Gameplay_Container"]
position = Vector2( 556.006, 148.667 )

[node name="UI_Container" type="Node" parent="."]

[node name="Main Interface" parent="UI_Container" instance=ExtResource( 2 )]

[node name="Intro_Container" type="Node" parent="."]

[node name="ScreenOverlay" type="ColorRect" parent="Intro_Container"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0.12549, 1 )

[node name="AnimationPlayer_ScreenFade" type="AnimationPlayer" parent="Intro_Container/ScreenOverlay"]
anims/Fade = SubResource( 1 )

[node name="Outtro_Container" type="Node" parent="."]
